--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ language: python
 python:
   - "3.5"
   - "3.4"
-  - "3.3"
   - "2.7"
 
 before_install:
@@ -19,3 +18,8 @@ script: coverage run --source luzfcb_dj_simplelock runtests.py
 
 after_success:
   - codecov
+
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
