--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ script: coverage run --source luzfcb_dj_simplelock runtests.py
 after_success:
   - codecov
 
-before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
+#before_script:
+#  - "export DISPLAY=:99.0"
+#  - "sh -e /etc/init.d/xvfb start"
+#  - sleep 3 # give xvfb some time to start
