--- a/.landscape.yaml
+++ b/.landscape.yaml
@@ -1,4 +1,4 @@
-doc-warnings: yes
+doc-warnings: no
 test-warnings: no
 strictness: veryhigh
 max-line-length: 119
@@ -14,6 +14,7 @@ ignore-paths:
 ignore-patterns:
     - (^|/)docs(/|$)
     - (^|/)migrations(/|$)
+    - sample_project/settings.py
 python-targets:
     - 2
     - 3
